# beehive

./: .gitignore  Jenkinsfile  README.md  pants.toml  pyproject.toml
deployment/: beehive.staging
deployment/beehive-app/: docker-compose.yml  prod.env  staging.env
deployment/cicd/: docker-compose.yml
lib/python/elasticfluent/: BUILD  Dockerfile
lib/python/elasticfluent/src/beehive/elasticfluent/: BUILD  __main__.py  foo.py
lib/python/elasticfluent/test/beehive/elasticfluent/: test_foo.py
